# verigov

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
.poetry-config/: pyproject.toml
apps/api/: Dockerfile  README.md  manual_test.py  pyproject.toml  reproduce_issue.py
apps/api/app/: main.py
apps/api/app/api/routers/: __init__.py  auth.py  health.py  jobs.py  metrics.py  reports.py  targets.py  users.py
apps/api/app/connectors/: receita.py
apps/api/app/core/: config.py  deps.py  logging.py  metrics.py  middleware.py  security.py  tracing.py  utils.py
apps/api/app/db/: rls.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 0001_initial.py
apps/api/app/domain/: models.py
apps/api/app/repositories/: audit_logs.py  checks.py  reports.py  targets.py  tenants.py  users.py
apps/api/app/schemas/: auth.py  reports.py  targets.py
apps/api/app/scripts/: seed.py
apps/api/app/services/: audit_service.py  auth_service.py  check_service.py  job_queue.py  report_service.py
apps/api/tests/: conftest.py  test_api_flow.py  test_connectors.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.tsbuildinfo
apps/web/src/: index.css  main.tsx
apps/web/src/app/: App.tsx
apps/web/src/components/: AppLayout.tsx  ToastProvider.tsx
apps/web/src/lib/: api.ts  auth.ts
docs/: api.md  architecture.md  ready-to-go.md  technical.md
infra/compose/: .env.example  docker-compose.yml  prometheus.yml
scripts/: Makefile  compose-logs.sh  dev-up.sh
(+6 files in other folders)
